--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "copy-webpack-plugin": "^10.2.4",
     "html-webpack-plugin": "^5.5.0",
     "jquery": "^3.6.0",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
     "webpack-merge": "^5.8.0",
     "webpack-pwa-manifest": "^4.3.0"
